# parakeet-tdt-0.6b-v2-fastapi

./: .env.example  README.md  openapi.yaml  pyproject.toml
parakeet_service/: audio.py  batchworker.py  chunker.py  config.py  model.py  routes.py  schemas.py  streaming_vad.py
